--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_swipe_cards_next">Next</string>
     <string name="fragment_swipe_cards_flip">Flip</string>
+    <string name="hello_world">hello World</string>
+    <string name="hello_world_2">Welcome</string>
 </resources>
